--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/CSS/styles.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>My Favorite Recipes</h1>
+
+    <img src="/images/chef.webp" alt="chef" />
+
+    <h2>Best Pie Crust Recipe</h2>
 
     <ul>
       <li>
-        <a href="/recipes/lasagna.html">Lasagna recipe</a>
+        <a href="/recipes/pie.html">Best Pie Crust</a>
       </li>
+    </ul>
+
+    <h2>Pesto Pasta</h2>
+
+    <ul>
       <li>
-        <a href="/recipes/chicken.html">Chicken recipe</a>
+        <a href="/recipes/pesto-pasta.html">Pesto Pasta</a>
       </li>
     </ul>
   </body>
