all changes added

--- a/index.html
+++ b/index.html
@@ -6,28 +6,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/styles.css" />
+    <link rel="stylesheet" href="/odin-recipes/CSS/styles.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
     <h1>My Favorite Recipes</h1>
 
-    <img src="/images/chef.webp" alt="chef" />
+    <div class="flex">
+      <img
+        src="/odin-recipes/images/chef.webp"
+        alt="chef"
+        class="hero__image"
+      />
 
-    <h2>Best Pie Crust Recipe</h2>
+      <h2>Best Pie Crust Recipe</h2>
 
-    <ul>
-      <li>
-        <a href="/recipes/pie.html">Best Pie Crust</a>
-      </li>
-    </ul>
+      <ul>
+        <li>
+          <a href="/odin-recipes/recipes/pie.html">Best Pie Crust</a>
+        </li>
+      </ul>
 
-    <h2>Pesto Pasta</h2>
+      <h2>Pesto Pasta</h2>
 
-    <ul>
-      <li>
-        <a href="/recipes/pesto-pasta.html">Pesto Pasta</a>
-      </li>
-    </ul>
+      <ul>
+        <li>
+          <a href="/odin-recipes/recipes/pesto-pasta.html">Pesto Pasta</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
