--- a/recipes/pie.html
+++ b/recipes/pie.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Best Pie Crust Recipe</h1>
 
-    <img src="/images/pie-crust.webp" alt="Best Pie Crust Recipe" />
+    <img src="/odin-recipes/images/pie-crust.webp" alt="Best Pie Crust Recipe" />
 
     <h2>Best Ever Pie Crust</h2>
 
