--- a/recipes/pesto-pasta.html
+++ b/recipes/pesto-pasta.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Pesto Pasta</h1>
 
-    <img src="/images/pesto-pasta.webp" alt="Pesto Pasta Recipe" />
+    <img src="/odin-recipes/images/pesto-pasta.webp" alt="Pesto Pasta Recipe" />
 
     <p>
       Pesto pasta is easy to make and full of flavor. It tastes good hot or cold!
